--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     margin: 0;
+    background-color: black;
+    color: white;
 }
 .game .container {
     width: 700px;
@@ -11,10 +13,8 @@ body {
     background-color: #00796B;
     padding: 10px 0;
     margin: 0;
-    color: white;
 }
 .lvl-seconds {
-    background-color: #ddd;
     padding: 20px 0;
 
 }
@@ -28,6 +28,7 @@ body {
 }
 .game .container button{
     cursor: pointer;
+    color: white;
     width: 100%;
     padding: 10px;
     border: none;
@@ -35,7 +36,6 @@ body {
     font-weight: 800;
     letter-spacing: 1px;
     background-color: #03A9F4;
-    color: white;
     border-radius: 6px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
@@ -43,7 +43,6 @@ body {
     -o-border-radius: 6px;
 }
 .game .word {
-    background-color: #eee;
     color: #03A9F4;
     font-size: 32px;
     font-weight: 700;
@@ -90,7 +89,6 @@ body {
     position: relative;
     padding: 6px 8px;
     background-color: #03A9F4;
-    color: white;
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -109,7 +107,6 @@ body {
 .game .container .seconds-score {
     display: flex;
     justify-content: space-between;
-    background-color: #ddd;
     padding: 10px;
 }
 .controls {
