--- a/main.css
+++ b/main.css
@@ -42,6 +42,9 @@ body {
     -ms-border-radius: 6px;
     -o-border-radius: 6px;
 }
+.delete-all {
+    display: none;
+}
 .game .word {
     color: #03A9F4;
     font-size: 32px;
