--- a/main.css
+++ b/main.css
@@ -100,6 +100,7 @@ body {
 }
 .game .words > div span {
     position: absolute;
+    display: none;
     cursor: pointer;
     font-weight: bold;
     position: absolute;
